# Pathfinder-v2

./: .gitignore  README.md  important.txt  main.py  pyproject.toml  useful.txt
archive/: README.md  Visualize.ipynb  cython_astar.py  cython_setup.py  depth_gsv_panoramic.py  depth_monocular.py  main.c  memory_benchmark.py  old.c  old_astar.py  percolation_notes.py
archive/depth_assets/gsvpanojs/: test.html
core/: astar.py  config.py  directions.py  geo.py  percolation.py  visualization.py
data/gis/STRUCT_California_State_GDB.gdb/: a00000001.TablesByName.atx  a00000001.freelist  a00000001.gdbtable  a00000001.gdbtablx  a00000003.gdbtable  a00000004.CatItemsByPhysicalName.atx  a00000004.CatItemsByType.atx  a00000004.FDO_UUID.atx  a00000004.freelist  a00000004.gdbtable  a00000004.gdbtablx  a00000005.CatItemTypesByName.atx  a00000005.CatItemTypesByParentTypeID.atx  a00000005.CatItemTypesByUUID.atx  a00000005.gdbtable  a00000005.gdbtablx  a00000006.CatRelsByDestinationID.atx  a00000006.CatRelsByOriginID.atx  a00000006.CatRelsByType.atx  (+22 more)
data/tiger/: convert.sh  counties.txt
data_pipeline/: sync_images.sh  test_maps.py
data_pipeline/gsv/: download_images.py  extract_ids.py  map_filenames.py  parse_links.py  scrape_urls.py  verify_downloads.py
data_pipeline/road_network/: adjacency_dropout.py  adjacency_stats.py  build_adjacency.py  download_tiger.py
docs/: architecture.md  git_history_archive.txt
scenery/: analyze_segments.py  colorkey.txt  inference.py
tests/: test_astar.py  test_config.py  test_directions.py  test_geo.py  test_percolation.py
(+4 files in other folders)
